<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_News"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menuDrawerNews"/>

        <item
            android:id="@+id/nav_Cursos"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menuDrawerCursos"/>

        <item
            android:id="@+id/nav_Teacher"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menuDrawerTeacher"/>

        <item
            android:id="@+id/nav_Students"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menuDrawerStudents"/>

        <item
            android:id="@+id/nav_Notes"
            android:icon="@drawable/ic_baseline_note_add_24"
            android:title="@string/menuDrawerNotes"/>


        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menuDrawerContactus"/>

        <item
            android:id="@+id/nav_claims_book"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menuDrawerClaimsBook"/>

    </group>
</menu>